--- a/app/src/main/res/layout/tela_constraint.xml
+++ b/app/src/main/res/layout/tela_constraint.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/tvTelefone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Telefone:"
-        android:textSize="20sp"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="10dp">
+<TextView
+    android:id="@+id/tvTelefone"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    android:text="Telefone:"
+    android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/tvEmail"
@@ -54,9 +53,5 @@
         app:layout_constraintTop_toBottomOf="@+id/edtEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
-
-
-
-
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
