--- a/app/src/main/res/layout/fragment_pessoa.xml
+++ b/app/src/main/res/layout/fragment_pessoa.xml
@@ -4,18 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
-    <TextView
-        android:id="@+id/tvNome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nome:"
-        android:textSize="24sp" />
-    <TextView
-        android:id="@+id/tvIdade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Idade:"
-        android:textSize="24sp"/>
+
+
     <EditText
         android:id="@+id/edtNome"
         android:layout_width="match_parent"
@@ -23,6 +13,7 @@
         android:ems="10"
         android:inputType="text"
         android:hint="Digite seu nome"/>
+
     <EditText
         android:id="@+id/edtAnoNascimento"
         android:layout_width="match_parent"
@@ -30,7 +21,16 @@
         android:inputType="number"
         android:maxLength="4"
         android:hint="Digite seu ano de nascimento:"
+
         />
+    <EditText
+        android:id="@+id/edtSexo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="Digite seu sexo:"
+        />
+
 
     <Button
         android:id="@+id/btnEnviar"
